# demand_forecaster

./: ..env.swp  .env  APPLICATION_FLOW.md  Dockerfile  Dockerfile.serve  README.md  cloudbuild.yaml  forecast_pipeline.json  pyproject.toml
deploy/: vertex.py
notebooks/: Demo_End_to_End.ipynb  EDA.ipynb
pipeline/: forecast_pipeline.py
scripts/: batch_predict.py  build_and_deploy_serving.sh  deploy_and_run.sh  endpoint_predict.py  run_cloudrun_pipeline.sh  setup_model_monitoring.py  submit_hpt.py  train_with_best_params.py
src/sales_forecast/: config.py  data_ingest.py  features.py  predict.py  serve_app.py  train.py
tests/: test_features_smoke.py
